--- a/views/management.html
+++ b/views/management.html
@@ -104,8 +104,171 @@
             <section class="wrapper">
                 <div class="row">
 
-                    </row>
-                    <!-- /row -->
+                    <div class="col-lg-9 main-chart">
+
+
+                        <!-- SERVER STATUS PANELS -->
+                        <div class="border-head">
+                            <h3>USER VISITS</h3>
+                        </div>
+                        <div class="custom-bar-chart">
+                            <ul class="y-axis">
+                                <li><span>100</span></li>
+                                <li><span>80</span></li>
+                                <li><span>60</span></li>
+                                <li><span>40</span></li>
+                                <li><span>20</span></li>
+                                <li><span>0</span></li>
+                            </ul>
+                            <div class="bar">
+                                <div class="title">JAN</div>
+                                <div class="value tooltips" data-original-title="0" data-toggle="tooltip" data-placement="top">0%</div>
+                            </div>
+                            <div class="bar ">
+                                <div class="title">FEB</div>
+                                <div class="value tooltips" data-original-title="0" data-toggle="tooltip" data-placement="top">0%</div>
+                            </div>
+                            <div class="bar ">
+                                <div class="title">MAR</div>
+                                <div class="value tooltips" data-original-title="20" data-toggle="tooltip" data-placement="top">20%</div>
+                            </div>
+                            <div class="bar ">
+                                <div class="title">APR</div>
+                                <div class="value tooltips" data-original-title="60" data-toggle="tooltip" data-placement="top">60%</div>
+                            </div>
+                            <div class="bar">
+                                <div class="title">MAY</div>
+                                <div class="value tooltips" data-original-title="40" data-toggle="tooltip" data-placement="top">40%</div>
+                            </div>
+                            <div class="bar ">
+                                <div class="title">JUN</div>
+                                <div class="value tooltips" data-original-title="0" data-toggle="tooltip" data-placement="top">0%</div>
+                            </div>
+                            <div class="bar">
+                                <div class="title">JUL</div>
+                                <div class="value tooltips" data-original-title="0" data-toggle="tooltip" data-placement="top">0%</div>
+                            </div>
+                        </div>
+                        <!--custom chart end-->
+                        <div class="row mt">
+                            <div class="col-md-4 col-sm-4 mb">
+                                <div class="grey-panel pn donut-chart">
+                                    <div class="grey-header">
+                                        <h5>SERVER LOAD</h5>
+                                    </div>
+                                    <canvas id="serverstatus01" height="120" width="120"></canvas>
+                                    <script>
+                                        var doughnutData = [{
+                                            value: 70,
+                                            color: "#FF6B6B"
+                                        }, {
+                                            value: 30,
+                                            color: "#fdfdfd"
+                                        }];
+                                        var myDoughnut = new Chart(document.getElementById("serverstatus01").getContext("2d")).Doughnut(doughnutData);
+                                    </script>
+                                    <div class="row">
+                                        <div class="col-sm-6 col-xs-6 goleft">
+                                            <p>Usage<br/>Increase:</p>
+                                        </div>
+                                        <div class="col-sm-6 col-xs-6">
+                                            <h2>21%</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- /grey-panel -->
+                            </div>
+                            <!-- /col-md-4-->
+                            <div class="col-md-4 col-sm-4 mb">
+                                <div class="darkblue-panel pn">
+                                    <div class="darkblue-header">
+                                        <h5>SITE STATICS</h5>
+                                    </div>
+                                    <h1 class="mt"><i class="fa fa-user fa-3x"></i></h1>
+                                    <p>+89 NEW VISITS</p>
+                                    <footer>
+                                        <div class="centered">
+                                            <h5><i class="fa fa-trophy"></i> 288</h5>
+                                        </div>
+                                    </footer>
+                                </div>
+                                <!--  /darkblue panel -->
+                            </div>
+
+                            <div class="col-md-4 col-sm-4 mb">
+                                <div class="green-panel pn">
+                                    <div class="green-header">
+                                        <h5>DISK SPACE</h5>
+                                    </div>
+                                    <canvas id="serverstatus03" height="120" width="120"></canvas>
+                                    <script>
+                                        var doughnutData = [{
+                                            value: 60,
+                                            color: "#2b2b2b"
+                                        }, {
+                                            value: 40,
+                                            color: "#fffffd"
+                                        }];
+                                        var myDoughnut = new Chart(document.getElementById("serverstatus03").getContext("2d")).Doughnut(doughnutData);
+                                    </script>
+                                    <h3>60% USED</h3>
+                                </div>
+                            </div>
+                            <!-- /col-md-4 -->
+                        </div>
+                        <!-- /row -->
+                    </div>
+                    <!-- /col-lg-9 END SECTION MIDDLE -->
+                    <!-- **********************************************************************************************************************************************************
+              RIGHT SIDEBAR CONTENT
+              *********************************************************************************************************************************************************** -->
+                    <div class="col-lg-3 ds">
+
+                        <!--COMPLETED ACTIONS DONUTS CHART-->
+                        <div class="donut-main">
+                            <h4>COMPLETED ACTIONS & PROGRESS</h4>
+                            <canvas id="newchart" height="50" width="130"></canvas>
+                            <script>
+                                var doughnutData = [{
+                                    value: 70,
+                                    color: "#4ECDC4"
+                                }, {
+                                    value: 30,
+                                    color: "#fdfdfd"
+                                }];
+                                var myDoughnut = new Chart(document.getElementById("newchart").getContext("2d")).Doughnut(doughnutData);
+                            </script>
+                        </div>
+                        <div class="panel terques-chart">
+                            <div class="panel-body">
+                                <div class="chart">
+                                    <div class="centered">
+                                        <span>TODAY EARNINGS</span>
+                                        <strong> 15%</strong>
+                                    </div>
+                                    <br>
+                                    <div class="sparkline" data-type="line" data-resize="true" data-height="50" data-width="90%" data-line-width="1" data-line-color="#fff" data-spot-color="#fff" data-fill-color="" data-highlight-line-color="#fff" data-spot-radius="4" data-data="[200,135,667,333,526,996,564,123,890,564,455]"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- CALENDAR-->
+                        <div id="calendar" class="mb">
+                            <div class="panel green-panel no-margin">
+                                <div class="panel-body">
+                                    <div id="date-popover" class="popover top" style="cursor: pointer; disadding: block; margin-left: 33%; margin-top: -50px; width: 175px;">
+                                        <div class="arrow"></div>
+                                        <h3 class="popover-title" style="disadding: none;"></h3>
+                                        <div id="date-popover-content" class="popover-content"></div>
+                                    </div>
+                                    <div id="my-calendar"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- / calendar -->
+                    </div>
+                    <!-- /col-lg-3 -->
+                </div>
+                <!-- /row -->
             </section>
         </section>
         <!--main content end-->
