--- a/views/add_engineer.html
+++ b/views/add_engineer.html
@@ -110,7 +110,7 @@
                     <div class="col-lg-12">
                         <div class="form-panel">
                             <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="Post" action="/">
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="Post" action="/addEng">
                                     <div class="form-group">
                                         <label for="firstname" class="control-label col-lg-2">First Name</label>
                                         <div class="col-lg-10">
