--- a/views/home/engineers.handlebars
+++ b/views/home/engineers.handlebars
@@ -108,36 +108,42 @@
                     <!-- page start-->
                     <div class="content-panel">
                         <div class="adv-table">
-                            <a type="button" class="btn btn-theme" href="add_engineer.html" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add An Engineer</a>
+                            <a type="button" class="btn btn-theme" href="/addEng" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add An Engineer</a>
 
                             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="hidden-table-info">
 
                                 <thead>
-                                {{#each viewEng}}
-                                    <tr>
 
+                                    <tr>
                                         <th>First Name</th>
                                         <th>Last Name</th>
                                         <th>Job</th>
-                                        <th class="hidden-phone">Email</th>
-                                        <th class="hidden-phone">Password</th>
+                                        <th >Email</th>
+                                        <th>Password</th>
                                         <th>Manage</th>
                                     </tr>
                                 </thead>
+
                                 <tbody>
+                                {{#each viewEng}}
                                     <tr class="gradeA">
                                         <td>{{this.datavalues.FName}}</td>
-                                        <td>{{this.datavalues.LName}}</td>
-                                        <td>{{this.datavalues.job}}</td>
-                                        <td class="  hidden-phone">{{this.datavalue.email}}</td>
-<!--                                        <td class=" hidden-phone">{{this.datavalues.FName}}</td>-->
-                                        <td class="center">
+                                        <td>Salma</td>
+<!--                                        <td>{{this.datavalues.LName}}</td>-->
+<!--                                        <td>Soso</td>-->
+                                        <td>{{this.datavalues.Job}}</td>
+<!--                                        <td>Alaa</td>-->
+                                        <td>{{this.datavalues.Email}}</td>
+<!--                                        <td>Koko</td>-->
+                                        <td>{{this.datavalues.Password}}</td>
 
-                                            <a href="edit_engineer.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
+                                <td class="center">
+
+                                <a href="edit_engineer.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
 
                                         </td>
-                                    </tr>
+                                   </tr>
                                 {{/each}}
                                 </tbody>
                             </table>
@@ -214,7 +220,7 @@
             var nCloneTd = document.createElement('td');
             nCloneTd.innerHTML = '<img src="lib/advanced-datatable/images/details_open.png">';
             nCloneTd.className = "center";
-
+            //
             $('#hidden-table-info thead tr').each(function() {
                 this.insertBefore(nCloneTh, this.childNodes[0]);
             });
