--- a/views/home/engineers.handlebars
+++ b/views/home/engineers.handlebars
@@ -119,26 +119,22 @@
                                         <th>Last Name</th>
                                         <th>Job</th>
                                         <th >Email</th>
-                                        <th>Password</th>
+
                                         <th>Manage</th>
                                     </tr>
                                 </thead>
-
                                 <tbody>
-                                {{#each viewEng}}
-                                    <tr class="gradeA">
-                                        <td>{{this.datavalues.FName}}</td>
-                                        <td>Salma</td>
-<!--                                        <td>{{this.datavalues.LName}}</td>-->
+                                {{#each engineer}}
+                                    <tr >
+                                        <td>{{this.dataValues.FName}}</td>
+<!--                                        <td>Salma</td>-->
+                                        <td>{{this.dataValues.LName}}</td>
 <!--                                        <td>Soso</td>-->
-                                        <td>{{this.datavalues.Job}}</td>
+                                        <td>{{this.dataValues.Job}}</td>
 <!--                                        <td>Alaa</td>-->
-                                        <td>{{this.datavalues.Email}}</td>
+                                        <td>{{this.dataValues.Email}}</td>
 <!--                                        <td>Koko</td>-->
-                                        <td>{{this.datavalues.Password}}</td>
-
                                 <td class="center">
-
                                 <a href="edit_engineer.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
 
