--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -110,8 +110,8 @@
                 <div class="row mt">
                     <div class="col-lg-12">
                         <div class="form-panel">
-                            <div class="form">
-                                <form class="cmxform form-horizontal style-form" id="signupForm" method="get" action="">
+                            <div class="form" >
+                                <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/pre-installationform">
                                     <div class="form-group">
                                         <label for="hospital" class="control-label col-lg-2">Hospital's Name</label>
                                         <div class="col-lg-10">
@@ -124,7 +124,7 @@
                                             <input class="form-control" id="department" name="department" type="text" required />
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group" >
                                         <label for="equipment" class="control-label col-lg-2">Equipment's Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="equipment" name="equipment" type="text" required/>
@@ -279,8 +279,8 @@
 
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-theme" type="submit">Add</button>
-                                            <a class="btn btn-theme04" type="button" href="pre_installation.html">Cancel</a>
+                                            <button class="btn btn-theme" href="/pre-installationform" type="submit">Add</button>
+                                            <a class="btn btn-theme04" type="button" >Cancel</a>
                                         </div>
                                     </div>
                                 </form>
