--- a/views/management.html
+++ b/views/management.html
@@ -85,7 +85,7 @@
                             <span>Reports</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="pre_installation.html">Pre-installation Report</a></li>
+                            <li><a href="/showPre-installationform">Pre-installation Report</a></li>
                             <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
                             <li><a href="workorder.html">Work Order Report</a></li>
                         </ul>
