--- a/views/home/equipments.handlebars
+++ b/views/home/equipments.handlebars
@@ -44,7 +44,7 @@
                 <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
             </div>
             <!--logo start-->
-            <a href="index.html" class="logo"><img style="width: 140px;height: 40px;" src="images/logo.png" alt="alternative"></a>
+            <a href="/index" class="logo"><img style="width: 140px;height: 40px;" src="images/logo.png" alt="alternative"></a>
             <!--logo end-->
 
         </header>
@@ -58,7 +58,7 @@
                 <!-- sidebar menu start-->
                 <ul class="sidebar-menu" id="nav-accordion">
                     <li class="mt">
-                        <a href="management.html">
+                        <a href="/managementSystem">
                             <i class="fa fa-medkit"></i>
                             <span>Dashboard</span>
                         </a>
@@ -69,13 +69,13 @@
                             <span>Staff</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="engineers.handlebars">Engineers</a></li>
+                            <li><a href="/viewEng">Engineers</a></li>
                             <li><a href="technicians.html">Technicians</a></li>
 
                         </ul>
                     </li>
                     <li class="mt">
-                        <a class="active" href="equipments.html">
+                        <a class="active" href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
                         </a>
@@ -86,9 +86,9 @@
                             <span>Reports</span>
                         </a>
                         <ul class="sub">
-                            <li><a href="pre_installation.html">Pre-installation Report</a></li>
+                            <li><a href="/showPre-installationform">Pre-installation Report</a></li>
                             <li><a href="preventive_maintance.html">Preventive Maintainance Report</a></li>
-                            <li><a href="workorder.html">Work Order Report</a></li>
+                            <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
 
@@ -108,7 +108,7 @@
                     <!-- page start-->
                     <div class="content-panel">
                         <div class="adv-table">
-                            <a type="button" class="btn btn-theme" href="add_equipment.html" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add An Equipment</a>
+                            <a type="button" class="btn btn-theme" href="/showEqform" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add An Equipment</a>
 
                             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="hidden-table-info">
 
@@ -123,19 +123,20 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {{#each equip}}
                                     <tr class="gradeA">
-                                        <td>MRI</td>
-                                        <td>20-10-2020</td>
-                                        <td class="  hidden-phone">111</td>
-                                        <td class=" hidden-phone">20-10-2021</td>
-                                        <td class=" hidden-phone">Radiology</td>
+                                        <td>{{this.dataValues.Name}}</td>
+                                        <td>{{this.dataValues.Model}}</td>
+                                        <td class="  hidden-phone">{{this.dataValues.SerialNO}}</td>
+                                        <td class=" hidden-phone">{{this.dataValues.DueDate}}</td>
+                                        <td class=" hidden-phone">{{this.dataValues.Department}}</td>
 
                                         <td class="center">
                                             <a href="edit_equipment.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
                                             <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
-
+                                    {{/each}}
                                 </tbody>
                             </table>
                         </div>
