--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,7 @@
         <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Evolo</a> -->
 
         <!-- Image Logo -->
-        <a class="navbar-brand logo-image" href="index.html"><img style="width: 180px;height: 80px;" src="images/logo.png" alt="alternative"></a>
+        <a class="navbar-brand logo-image" href="/index"><img style="width: 180px;height: 80px;" src="images/logo.png" alt="alternative"></a>
 
         <!-- Mobile Menu Toggle Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
                         <div class="text-container">
                             <h1><span class="turquoise">Medical Equipment</span> Management System</h1>
                             <p class="p-large">Medical equipment asset management and first-rate medical equipment enhance the quality of healthcare provided to patients.</p>
-                            <a class="btn-solid-lg page-scroll" href="login.html">LOGIN TO THE  
+                            <a class="btn-solid-lg page-scroll" href="/showLogin">LOGIN TO THE  
                                 SYSTEM</a>
                         </div>
                         <!-- end of text-container -->
