--- a/views/add_engineer.html
+++ b/views/add_engineer.html
@@ -70,7 +70,7 @@
                         </a>
                         <ul class="sub">
                             <li class="active"><a href="/viewEng">Engineers</a></li>
-                            <li><a href="technicians.html">Technicians</a></li>
+                            <li><a href="/viewTech">Technicians</a></li>
 
                         </ul>
                     </li>
