--- a/views/management.html
+++ b/views/management.html
@@ -69,7 +69,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/viewEng">Engineers</a></li>
-                            <li><a href="technicians.html">Technicians</a></li>
+                            <li><a href="/viewTech">Technicians</a></li>
 
                         </ul>
                     </li>
@@ -86,7 +86,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="/viewTech">Preventive Maintainance Report</a></li>
+                            <li><a href="">Preventive Maintainance Report</a></li>
                             <li><a href="/showWorkOrders">Work Order Report</a></li>
                         </ul>
                     </li>
