--- a/views/edit_equipment.html
+++ b/views/edit_equipment.html
@@ -72,7 +72,7 @@
                         </a>
                         <ul class="sub">
                             <li><a href="/viewEng">Engineers</a></li>
-                            <li><a href="technicians.html">Technicians</a></li>
+                            <li><a href="/viewTech">Technicians</a></li>
 
                         </ul>
                     </li>
